# RMA-Kernel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: implementation_spec.md  whitepaper_v1.md
examples/: demo_loop.py
src/: __init__.py  embedding.py  exceptions.py  generator.py  supervisor.py  uncertainty.py  verifier.py
src/protocols/: initialization.json
tests/: test_supervisor.py
