[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rma-kernel"
version = "0.1.0"
description = "Short description of RMA-Kernel"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = []

[tool.black]
line-length = 88
